// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Expense total page corectly with multiple Expense 1`] = `
<div>
  <h1>
    Viewing
    23
    expenses
    totalling
    $234,123,456,756.54
  </h1>
</div>
`;

exports[`should render Expense total page corectly with one Expense 1`] = `
<div>
  <h1>
    Viewing
    1
    expense
    totalling
    $2.34
  </h1>
</div>
`;
